--- a/exp.ipynb
+++ b/exp.ipynb
@@ -35,7 +35,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 25%|██▌       | 100/400 [00:04<00:14, 20.54it/s]\n"
+      " 25%|██▌       | 100/400 [00:04<00:14, 20.87it/s]\n"
      ]
     },
     {
@@ -49,16 +49,43 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 25%|██▌       | 100/400 [00:00<00:00, 4166.39it/s]\n"
+      " 25%|██▌       | 100/400 [00:00<00:00, 4541.70it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 (100,) (100, 800, 800, 3) (100,)\n"
      ]
     }
    ],
    "source": [
     "pixels = load_data()\n",
     "c2w = load_mat()\n",
-    "rays = ti.field(ti.f32, shape=(len(pixels), pixels[0].shape[0], pixels[0].shape[1], 3))\n",
-    "origins = ti.field(ti.f32, shape=(len(pixels), 3))\n",
+    "rays = ti.Vector.field(3,ti.f32, shape=(len(pixels), pixels[0].shape[0], pixels[0].shape[1]))\n",
+    "origins = ti.Vector.field(3,ti.f32, shape=(len(pixels)))\n",
     "print(len(pixels),c2w.shape,rays.shape,origins.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<3x1 ti.Matrix.field>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "origins"
    ]
   },
   {
@@ -67,20 +94,20 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TaichiCompilationError",
-     "evalue": "\nFile \"g:\\Homework\\nerf\\process.py\", line 81, in calRays:\n    origins[index] = mul(vec3(0.0, 0.0, 0.0), c2w[index])\n                                              ^^^^^^^^^^\nTraceback (most recent call last):\n  File \"C:\\Users\\Tingyang\\AppData\\Roaming\\Python\\Python39\\site-packages\\taichi\\lang\\ast\\ast_transformer_utils.py\", line 27, in __call__\n    return method(ctx, node)\n  File \"C:\\Users\\Tingyang\\AppData\\Roaming\\Python\\Python39\\site-packages\\taichi\\lang\\ast\\ast_transformer.py\", line 233, in build_Subscript\n    node.ptr = impl.subscript(ctx.ast_builder, node.value.ptr, *node.slice.ptr)\n  File \"C:\\Users\\Tingyang\\AppData\\Roaming\\Python\\Python39\\site-packages\\taichi\\lang\\util.py\", line 312, in wrapped\n    return func(*args, **kwargs)\n  File \"C:\\Users\\Tingyang\\AppData\\Roaming\\Python\\Python39\\site-packages\\taichi\\lang\\impl.py\", line 194, in subscript\n    return value.__getitem__(_indices)\nAttributeError: 'NoneType' object has no attribute '__getitem__'\n",
+     "ename": "TaichiIndexError",
+     "evalue": "\nFile \"g:\\Homework\\nerf\\process.py\", line 81, in calRays:\n        rays[index, i, j] = tm.normalize(\n        ^^^^^^^^^^^^^^^^^\nField with dim 4 accessed with indices of dim 3",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTaichiCompilationError\u001b[0m                    Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_11104\\2907508313.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcalRays\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTaichiIndexError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_26028\\1834993160.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcalRays\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mrays\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mc2w\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0morigins\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m~\\AppData\\Roaming\\Python\\Python39\\site-packages\\taichi\\lang\\kernel_impl.py\u001b[0m in \u001b[0;36mwrapped\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    974\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mprimal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    975\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mTaichiCompilationError\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mTaichiRuntimeError\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 976\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mtype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"\\n\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    977\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    978\u001b[0m         \u001b[0mwrapped\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgrad\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0madjoint\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTaichiCompilationError\u001b[0m: \nFile \"g:\\Homework\\nerf\\process.py\", line 81, in calRays:\n    origins[index] = mul(vec3(0.0, 0.0, 0.0), c2w[index])\n                                              ^^^^^^^^^^\nTraceback (most recent call last):\n  File \"C:\\Users\\Tingyang\\AppData\\Roaming\\Python\\Python39\\site-packages\\taichi\\lang\\ast\\ast_transformer_utils.py\", line 27, in __call__\n    return method(ctx, node)\n  File \"C:\\Users\\Tingyang\\AppData\\Roaming\\Python\\Python39\\site-packages\\taichi\\lang\\ast\\ast_transformer.py\", line 233, in build_Subscript\n    node.ptr = impl.subscript(ctx.ast_builder, node.value.ptr, *node.slice.ptr)\n  File \"C:\\Users\\Tingyang\\AppData\\Roaming\\Python\\Python39\\site-packages\\taichi\\lang\\util.py\", line 312, in wrapped\n    return func(*args, **kwargs)\n  File \"C:\\Users\\Tingyang\\AppData\\Roaming\\Python\\Python39\\site-packages\\taichi\\lang\\impl.py\", line 194, in subscript\n    return value.__getitem__(_indices)\nAttributeError: 'NoneType' object has no attribute '__getitem__'\n"
+      "\u001b[1;31mTaichiIndexError\u001b[0m: \nFile \"g:\\Homework\\nerf\\process.py\", line 81, in calRays:\n        rays[index, i, j] = tm.normalize(\n        ^^^^^^^^^^^^^^^^^\nField with dim 4 accessed with indices of dim 3"
      ]
     }
    ],
    "source": [
-    "calRays(0)"
+    "calRays(0,rays,c2w,origins)"
    ]
   },
   {
