--- a/exp.ipynb
+++ b/exp.ipynb
@@ -35,13 +35,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 25%|██▌       | 100/400 [00:04<00:14, 20.97it/s]\n"
+      " 25%|██▌       | 100/400 [00:04<00:14, 20.81it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "100 images loaded successfully with the shape of (800, 800)\n",
       "Loading Lego/pose/\n"
      ]
     },
@@ -49,13 +50,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 25%|██▌       | 100/400 [00:00<00:00, 4346.65it/s]\n"
+      " 25%|██▌       | 100/400 [00:00<00:00, 4777.82it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "100 matrices loaded successfully\n",
       "100 (100,) (100, 800, 800) (100,)\n"
      ]
     }
@@ -74,27 +76,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calRays(0,rays,c2w,origins)"
+    "for i in range(len(pixels)):\n",
+    "    calRays(i,rays,c2w,origins)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[ 0.01209058 -0.95358515 -0.3008804 ]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ -2.68991613 192.27352905  60.40411758]\n"
+     ]
     }
    ],
    "source": [
-    "rays[0,400,400]"
+    "print(origins[0])\n",
+    "print(rays[0,0,0],rays[0,799,799])"
    ]
   },
   {
@@ -103,9 +104,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "vs = voxel_system()\n",
+    "vs.random_init()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "buffer=ti.Vector.field(3,dtype=ti.f32,shape=(800,800))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "renderBuffer(buffer,vs.content,origins,rays,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "gui = ti.GUI('window', (800,800), fast_gui=False)\n",
     "while gui.running:\n",
-    "    gui.set_image(pixels[0])\n",
+    "    gui.set_image(buffer)\n",
     "    gui.show()"
    ]
   }
