--- a/exp.ipynb
+++ b/exp.ipynb
@@ -35,7 +35,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 25%|██▌       | 100/400 [00:04<00:13, 21.50it/s]\n"
+      " 25%|██▌       | 100/400 [00:04<00:13, 21.56it/s]\n"
      ]
     },
     {
@@ -50,7 +50,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 25%|██▌       | 100/400 [00:00<00:00, 4675.66it/s]\n"
+      " 25%|██▌       | 100/400 [00:00<00:00, 4559.97it/s]\n"
      ]
     },
     {
@@ -89,14 +89,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ -3.76588249 269.18292236  84.56576538]\n",
-      "[ 0.58718401 -0.71608198  0.37741446] [-0.57176083 -0.38635582 -0.72375333]\n"
+      "[   8.06974792  181.21234131 -576.82055664]\n",
+      "[-0.331018   -0.57290298  0.74980611] [0.30722567 0.03862876 0.95085233] [-0.0137938  -0.30011761  0.95380241]\n"
      ]
     }
    ],
    "source": [
     "print(origins[0])\n",
-    "print(rays[0,0,0],rays[0,799,799])"
+    "print(rays[0,0,0],rays[0,799,799],rays[0,399,399])"
    ]
   },
   {
@@ -120,16 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "renderBuffer(buffer,vs.content,origins,rays,0)"
+    "renderBuffer(buffer,vs.content,origins,rays,3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
