--- a/exp.ipynb
+++ b/exp.ipynb
@@ -36,7 +36,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 25%|██▌       | 100/400 [00:09<00:28, 10.71it/s]\n"
+      " 25%|██▌       | 100/400 [00:09<00:28, 10.53it/s]\n"
      ]
     },
     {
@@ -51,7 +51,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 25%|██▌       | 100/400 [00:00<00:00, 3947.84it/s]\n"
+      " 25%|██▌       | 100/400 [00:00<00:00, 2951.08it/s]\n"
      ]
     },
     {
@@ -121,14 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [01:26<00:00,  1.15it/s]\n"
+      "100%|██████████| 100/100 [01:26<00:00,  1.16it/s]\n"
      ]
     }
    ],
@@ -153,7 +153,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [07:31<00:00, 45.19s/it]\n"
+      "100%|██████████| 10/10 [03:23<00:00, 20.37s/it]\n"
      ]
     }
    ],
@@ -167,6 +167,31 @@
     "        vs.update(False)\n",
     "        vs.zero_grad()\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [01:26<00:00,  1.16it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in tqdm(range(100)):\n",
+    "    \n",
+    "    k=i#np.random.randint(0,100)\n",
+    "    # renderBuffer(buffer,vs.content,origins,rays,k)\n",
+    "    # renderBuffer_back(buffer,vs.content,origins,rays,k,pixels[k],vs.grad)\n",
+    "    cluster(buffer,origins,rays,k,pixels[k],vs.grad)\n",
+    "    vs.update(True)\n",
+    "    vs.zero_grad()\n",
+    "    vs.lr[None]*=0.98"
    ]
   },
   {
@@ -221,43 +246,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "vs.lr[None]=0.01\n",
     "k=0\n",
     "renderBuffer(buffer,vs.content,origins,rays,k)\n",
-    "renderBuffer_back(buffer,vs.content,origins,rays,k,pixels[k],vs.grad)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-0.02600242 -0.02020469 -0.01176511 -0.00034963 -0.00027137 -0.00015604\n",
-      " -0.00591988 -0.00459941 -0.00267805  0.02531715  0.01967235  0.0114552\n",
-      "  0.        ]\n",
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(vs.grad[150,150,150])\n",
-    "print(vs.grad[140,140,140])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "renderBuffer_back(buffer,vs.content,origins,rays,k,pixels[k],vs.grad)\n",
     "vs.update(True)\n",
     "vs.zero_grad()\n",
     "vs.lr[None]*=0.98"
@@ -265,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
